--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,8 @@ ul {
 .site-nav .link:focus {
   color: var(--accent-color);
 }
-.adres-nav .link:hover,
-.adres-nav .link:focus {
+.adres .link:hover,
+.adres .link:focus {
   color: var(--accent-color);
 }
 
@@ -49,7 +49,7 @@ ul {
   font-size: 14px;
   line-height: 1.1;
 }
-.adres-link {
+.adres {
   color: var(--primary-text-color);
 }
 
@@ -67,6 +67,7 @@ ul {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
+  text-transform: uppercase;
 }
 .button {
   background: var(--accent-color);
@@ -75,6 +76,7 @@ ul {
   font-size: 16px;
   line-height: 1.8;
   font-family: Roboto, sans-serif;
+  cursor: pointer;
 }
 
 /* характеристики */
@@ -84,6 +86,7 @@ ul {
   font-size: 14px;
   line-height: 1.1;
   color: var(--title-text-color);
+  text-transform: uppercase;
 }
 .text {
   font-weight: 400;
@@ -131,11 +134,18 @@ ul {
   color: var(--primary-white-color);
 }
 .address {
-  color: var(--primary-white-color);
+  color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   font-style: normal;
+}
+
+.address-map {
+  color: var(--primary-white-color);
+}
+.address .link:hover {
+  color: var(--accent-color);
 }
 
 /*Портфоліо*/
