--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,21 @@ ul {
   list-style: none;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
 /* шапка профіля */
 
 .logo {
@@ -34,6 +49,7 @@ ul {
   font-size: 26px;
   line-height: 1.8;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
@@ -57,6 +73,15 @@ ul {
   color: var(--accent-color);
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+
+  outline: 2px solid #f44336;
+}
 /* заголовок */
 
 .hero {
